=======
CHANGES
=======

4.0.4 (unreleased)
------------------

- Nothing changed yet.


4.0.3 (2013-02-28)
------------------

- Only allow ``zope.untrustedpython`` to be a dependency in Python 2.

- Fix buildout to work properly.

4.0.2 (2013-02-22)
------------------

- Migrated from ``zope.security.untrustedpython`` to ``zope.untrustedpython``.

- Made ``zope.untrustedpython`` an extra dependency.  Without it, python
  expressions are not protected, even though path expressions are still
  security wrapped.

- Added support for Python 3.3.

4.0.1 (2012-01-23)
------------------

- LP#732972:  PageTemplateTracebackSupplement no longer passes
  ``check_macro_expansion=False`` to old templates which do not
  accept this argument.

4.0.0 (2012-12-13)
------------------

- Replaced deprecated ``zope.interface.classProvides`` usage with equivalent
  ``zope.interface.provider`` decorator.

- Replaced deprecated ``zope.interface.implements`` usage with equivalent
  ``zope.interface.implementer`` decorator.

- Dropped support for Python 2.4 and 2.5.

- PageTemplate.pt_render() has a new argument, check_macro_expansion,
  defaulting to True.

- PageTemplateTracebackSupplement passes check_macro_expansion=False, to
  avoid LP#732972.

3.6.3 (2011-09-21)
------------------

- Fixed test assertions to be compatible with zope.tal 3.6.

3.6.2 (2011-09-21)
------------------

- Change interface for engine and program such that the return type of
  the ``cook`` method is a tuple ``(program, macros)``. This follows
  the interface for the TAL parser's ``getCode`` method.

  This fixes a legacy compatibility issue where code would expect an
  ``_v_macros`` volatile attribute which was missing.

3.6.1 (2011-08-23)
------------------

- Fixed issue with missing default value for ``strictinsert``.

3.6.0 (2011-08-20)
------------------

- Replaced StringIO stream class with a faster list-based implementation.

- Abstract out the template engine and program interfaces and allow